--- a/src/Pages/HomePage/styles.module.scss
+++ b/src/Pages/HomePage/styles.module.scss
@@ -1,76 +1,28 @@
-/* Background */
-
-.rectangle {
-  background-color: white;
-  border-radius: 10px;
+.bg {
+  position: fixed;
+  height: 2100px;
+  transform: translate(-78%, -50%);
   z-index: -1;
 }
 
-#rectangle_white {
-  height: 50rem;
-  width: 34rem;
-  position: absolute;
-  top: 100px;
-  left: 200px;
+.container {
+  width: 100vw;
 }
 
-#rectangle_1 {
-  background-color: rgb(21, 29, 96);
-  height: 100rem;
-  width: 12rem;
-  position: absolute;
-  top: -300px;
-  left: -200px;
-  rotate: 14deg;
+.inputs {
+  width: 100vw;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
 }
 
-#rectangle_2 {
-  background-color: rgb(35, 45, 136);
-  height: 100rem;
-  width: 14rem;
-  position: absolute;
-  top: -300px;
-  left: -200px;
-  rotate: -14.29deg;
-}
-
-#rectangle_3 {
-  background-color: rgb(76, 89, 206);
-  height: 100rem;
-  width: 18rem;
-  position: absolute;
-  top: -300px;
-  left: -200px;
-  rotate: -7.37deg;
-}
-
-#rectangle_4 {
-  background-color: rgb(21, 29, 96);
-  height: 100rem;
-  width: 9rem;
-  position: absolute;
-  top: -300px;
-  right: -200px;
-  rotate: 20deg;
-}
-
-#rectangle_5 {
-  background-color: rgb(35, 45, 136);
-  height: 100rem;
-  width: 15rem;
-  position: absolute;
-  top: -300px;
-  right: -200px;
-  rotate: -10.73deg;
-}
-
-#rectangle_6 {
-  background-color: rgb(76, 89, 206);
-  height: 100rem;
-  width: 19rem;
-  position: absolute;
-  top: -300px;
-  right: -200px;
-  rotate: 1.99deg;
-  /* transform: translate(-100%, -50%); */
+.board {
+  background-color: white;
+  color: black;
+  width: 50vw;
+  height: 50vh;
+  border-radius: 20px;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
 }
