--- a/src/Pages/HomePage/styles.module.scss
+++ b/src/Pages/HomePage/styles.module.scss
@@ -7,7 +7,7 @@
     position: absolute;
     height: 920px;
     transform: translate(-78%, -50%);
-    left: 1700px;
+    right: -50vw;
     top: 500px;
     z-index: -1;
   }
